[Java Core/Java-8 p2/Stream practice] solution v(1.1) -some fixes;